setup peer to peer

--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -27,6 +27,7 @@ body {
 body > #__next {
   overflow: hidden;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
