--- a/frontend/components/BuildField/BuildField.module.scss
+++ b/frontend/components/BuildField/BuildField.module.scss
@@ -2,6 +2,20 @@
 }
 
 .BuildFieldSelection {
+  position: relative;
+}
+
+.BuildFieldLevel {
   display: flex;
   flex-wrap: wrap;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.BuildFieldSelect {
+  background: white;
+  position: fixed;
+  top: 20px;
+  left: 20px;
 }
