--- a/frontend/components/BuildField/BuildField.module.scss
+++ b/frontend/components/BuildField/BuildField.module.scss
@@ -19,3 +19,15 @@
   top: 20px;
   left: 20px;
 }
+
+.BuildFieldDownload {
+  position: fixed;
+  top: 20px;
+  left: 80px;
+}
+
+.BuildFieldLoad {
+  position: fixed;
+  top: 20px;
+  left: 250px;
+}
