--- a/frontend/components/Game/Tile.module.scss
+++ b/frontend/components/Game/Tile.module.scss
@@ -2,6 +2,8 @@
   position: absolute;
   top: 0;
   left: 0;
+  content-visibility: auto;
+  contain: strict;
 }
 
 .walkable {
@@ -17,4 +19,19 @@
     right: 0;
     left: 0;
   }
+}
+
+.label {
+  position: absolute;
+  top: 4px;
+  left: 50%;
+  transform: translateX(-50%);
+  margin: 0;
+  padding: 4px;
+  background: white;
+  color: black;
+  font-family: monospace;
+  white-space: pre;
+  font-weight: bolder;
+  border-radius: 5px;
 }
