--- a/frontend/pages/level/Level.module.scss
+++ b/frontend/pages/level/Level.module.scss
@@ -1,11 +1,13 @@
 .world {
   position: relative;
+  contain: 'strict';
 }
 .worldBase {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translateX(-50%) translateY(-50%);
+  contain: 'strict';
 }
 
 .tile {
