--- a/frontend/components/Game/Tile.module.scss
+++ b/frontend/components/Game/Tile.module.scss
@@ -23,7 +23,7 @@
 
 .label {
   position: absolute;
-  top: -4px;
+  bottom: 80%;
   left: 50%;
   transform: translateX(-50%);
   margin: 0;
@@ -34,4 +34,5 @@
   white-space: pre;
   font-weight: bolder;
   border-radius: 5px;
+  z-index: 500;
 }
